--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     display: flex;
+    flex-direction: column;
     margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
@@ -8,7 +9,7 @@ body {
     display: flex;
     justify-content: space-between;
     flex-grow: 1;
-    padding: 10px 100px 10px 100px;
+    padding: 5px 50px 5px 50px;
     background-color: #1F2937;
 }
 
@@ -17,17 +18,52 @@ body {
     font-size: 24px;
     color: #F9FAF8;
 }
-a {
+.header a {
     text-decoration: none;
     color: #E5E7EB;
     font-size: 13px;
     padding: 10px;
 }
 
-ul {
+.header ul {
     display: flex;
     justify-content: flex-end;
     list-style-type: none;
     margin: 0;
     padding: 0;
+}
+
+.containerone {
+    display: flex;
+    flex-shrink: 0;
+    margin-top: 0;
+    height: 175px;
+    background-color: red;
+    justify-content: space-between;
+}
+
+.leftgroup, .rightgroup {
+    display: flex;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+}
+
+/*.leftgroup {
+
+}
+.rightgroup {
+}*/
+.imagespot {
+    display: flex;
+    flex-shrink: 1;
+    justify-content: center;
+    align-items: center;
+    background-color: purple;
+    margin: 10px;
+    padding-bottom: 100px;
+    font-size: 13px;
 }
