--- a/style.css
+++ b/style.css
@@ -41,9 +41,10 @@ body {
     display: flex;
     flex-shrink: 0;
     margin-top: 0;
+    margin-bottom:0;
     padding-top: 45px;
     padding-bottom: 40px;
-    height: 175px;
+    height: 300px;
     background-color: #1F2937;
     justify-content: space-between;
 }
@@ -106,13 +107,43 @@ button {
 /* container two information */
 
 .containertwo {
-    background-color: red;
+    background-color: #F9FAF8;
     display: flex;
+    flex-direction: column;
     flex-shrink: 0;
     margin-top: 0;
-    padding-top: 45px;
-    padding-bottom: 40px;
-    height: 175px;
-    justify-content: space-between;
+    height: 300px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+    align-items: center;
+}
+#informationtitle {
+    margin: 0;
+    color: #1F2937;
+    padding-bottom: 10px;
+    font-size: 32px;
+    font-weight: 900;
+}
 
+.boxescontainer {
+    display: flex;
+    padding: 20px;
+    height: 300px;
+    width: 750px;
+    justify-content: space-between;
+}
+
+.images {
+    display: flex;
+    width: 150px;
+    height: 150px;
+    border: 5px solid royalblue;
+    border-radius: 10px;
+}
+
+.images p {
+    padding-top: 150px;
+    font-size: 13px;
+    color: #1F2937;
+    text-align: center;
 }
