--- a/style.css
+++ b/style.css
@@ -147,3 +147,32 @@ button {
     color: #1F2937;
     text-align: center;
 }
+
+/* container three information */
+
+.containerthree {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+    margin-top: 0;
+    height: 300px;
+    padding-left: 300px;
+    padding-right: 300px;
+    align-items: center;
+    justify-content: center;
+}
+
+#quotemain {
+    font-size: 20px;
+    color: #1F2937;
+}
+
+#signoff {
+    padding-left: 400px;
+    font-size: 15px;
+    color: #1F2937;
+    font-weight: bold;
+}
+
+/* container four information */
