--- a/style.css
+++ b/style.css
@@ -99,8 +99,8 @@ button {
   cursor: pointer;
   padding: 8px 8px;
   border-radius: 8px;
-  background: royalblue;
-  border: 1px solid royalblue;
+  background: #3882f6;
+  border: 1px solid #3882f6;
   color: white;
 }
 
@@ -137,7 +137,7 @@ button {
     display: flex;
     width: 150px;
     height: 150px;
-    border: 5px solid royalblue;
+    border: 5px solid #3882f6;
     border-radius: 10px;
 }
 
@@ -176,3 +176,59 @@ button {
 }
 
 /* container four information */
+
+.containerfour {
+    display: flex;
+    flex-shrink: 0;
+    margin-top: 0;
+    margin-bottom:0;
+    height: 300px;
+    background-color: #F9FAF8;
+    justify-content: center;
+    align-items: center;
+}
+
+.calltoaction {
+    flex-direction: column;
+    background-color: #3882f6;
+    height: 100px;
+    width: 800px;
+    padding-left: 100px;
+}
+
+.calltoaction button {
+    margin-left: 100px;
+    cursor: pointer;
+    padding: 8px 16px;
+    border-radius: 8%;
+    background-color: #3882f6;
+    color: #F9FAF8;
+    border: 1px solid #F9FAF8;
+}
+
+#actiontitle {
+    font-weight: bold;
+    color: #F9FAF8;
+    font-size: 18px;
+    margin-bottom: 0;
+    padding-top: 10px;
+}
+
+#actiontext {
+    font-size: 15px;
+    margin: 0;
+    color: #F9FAF8;
+}
+
+/* footer information */
+
+.footer {
+    margin-top: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: #1F2937;
+    color:#F9FAF8;
+    font-size: 13px;
+}
